<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".modul.loginPage.LoginPage">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:src="@drawable/logo_frek_full"/>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:text="@string/logo_caption"/>
        <TextView
            android:id="@+id/login.error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:gravity="center"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"/>
        <LinearLayout
            style="@style/LoginPageEditTextCont"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:tint="@color/white"
                android:src="@drawable/ic_user_red"/>
            <EditText
                android:id="@+id/login.username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/t3"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            style="@style/LoginPageEditTextCont"
            android:layout_marginTop="2dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:tint="@color/white"
                android:src="@drawable/ic_padlock_red"/>
            <EditText
                android:id="@+id/login.password"
                android:textSize="@dimen/t3"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <TextView
            android:id="@+id/login.forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin"
            android:text="@string/forgot_pwd"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/login.login_btn"
            android:layout_marginTop="40dp"
            style="@style/btn_padding"
            android:text="@string/login"
            android:background="@drawable/bg_red_stroke_btn"
            android:textColor="@color/red"
            android:textAllCaps="true"
            android:textSize="@dimen/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="@dimen/std_margin"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_acc_option"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/login.register"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/here"
                android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
