<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background_1080x1920"
    android:gravity="center"
    tools:context=".modul.loginPage.LoginPage">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:src="@drawable/logo_frek_full"/>
        <TextView
            android:layout_marginTop="@dimen/std_margin"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:text="@string/logo_caption"/>
        <LinearLayout
            style="@style/RegisterPageEditTextCont"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:src="@drawable/ic_user_white"/>
            <EditText
                android:id="@+id/register.name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/t3"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            style="@style/RegisterPageEditTextCont"
            android:layout_marginTop="2dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:src="@drawable/ic_mail_white"/>
            <EditText
                android:id="@+id/register.email"
                android:textSize="@dimen/t3"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/email_addr"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            style="@style/RegisterPageEditTextCont"
            android:layout_marginTop="2dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:src="@drawable/ic_padlock_white"/>
            <EditText
                android:id="@+id/register.password"
                android:textSize="@dimen/t3"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            style="@style/RegisterPageEditTextCont"
            android:layout_marginTop="2dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:src="@drawable/ic_padlock_white"/>
            <EditText
                android:id="@+id/register.conf_password"
                android:textSize="@dimen/t3"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/confirm_pwd"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            style="@style/RegisterPageEditTextCont"
            android:layout_marginTop="2dp">
            <ImageView
                android:layout_width="@dimen/small_ic_size"
                android:layout_height="@dimen/small_ic_size"
                android:src="@drawable/ic_mobile_phone_white"/>
            <EditText
                android:id="@+id/register.mobile"
                android:textSize="@dimen/t3"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/new_group_margin"
                android:textColor="@color/white"
                android:hint="@string/mobile_num"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="40dp"
            style="@style/btn_padding"
            android:text="@string/register"
            android:background="@drawable/bg_white_stroke_btn"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="@dimen/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="@dimen/std_margin"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_acc"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
