<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.milfrost.frek.modul.dashboard.new_emergencypage.NewEmergencyActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_tag"
            android:tint="@color/colorPrimary"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/text_color"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/tab_bg"
        android:id="@+id/category_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_description"
            android:tint="@color/colorPrimary"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/300"/>
    </LinearLayout>
    <EditText
        android:id="@+id/post_field"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:maxLength="300"
        android:layout_margin="15dp"
        android:hint="@string/describe_the_event"
        android:gravity="top"
        android:padding="10dp"
        android:textSize="@dimen/t3"
        android:background="@drawable/box_w_grey_stroke"/>
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_camera"
            android:tint="@color/colorPrimary"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo"
            android:textColor="@color/text_color"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:padding="15dp"
        android:id="@+id/image_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/post_news"
        style="@style/bold_font"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/post"
        android:textColor="@color/white"
        android:background="@drawable/rounded_blue_btn"/>
</LinearLayout>
