<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.milfrost.frek.modul.dashboard.profilepage.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/cover_img"
            android:src="@drawable/bg_default_user_cover"/>
        <LinearLayout
            android:background="@color/black_20op"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:paddingBottom="10dp"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/default_user_profile"/>
            <TextView
                android:textSize="@dimen/h4"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile.name"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:id="@+id/edit_profile_cont"
        android:background="@drawable/bg_border_bottom_grey"
        android:orientation="horizontal">
        <TextView
            style="@style/bold_font"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_right_arrow_white"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:id="@+id/change_pwd_cont"
        android:background="@drawable/bg_border_bottom_grey"
        android:orientation="horizontal">
        <TextView
            style="@style/bold_font"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/change_password"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_right_arrow_white"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/report_problem_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/bg_border_bottom_grey"
        android:orientation="horizontal">
        <TextView
            style="@style/bold_font"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/report_problem"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_right_arrow_white"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/priv_policy_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/bg_border_bottom_grey"
        android:orientation="horizontal">
        <TextView
            style="@style/bold_font"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/t4"
            android:text="@string/privacy_policy"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_right_arrow_white"
            android:tint="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/log_out_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:background="@drawable/bg_border_bottom_grey"
        android:orientation="horizontal">
        <TextView
            style="@style/bold_font"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/log_out"/>
    </LinearLayout>
    </LinearLayout>

</ScrollView>
